Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
4.4.0, 4.8.1
-
None
-
Linux
KDE 4.7 and 4.8
Mac OS X
-
1279045ab270cdd34af0a41aa7642593aa93d19b (4.8)
Description
As i have written in the comment:
I still get this problem wit Qt 4.8.1.
Even worse, it looks like KDE’s kwin first displays a dialog in the top left corner and then moves it.
The result is that when you want to show a QDialog with a QComboBox popped up, the pop-up is immediately detached from the dialog.
Just running the attached program results in a misplaced popup, as shown in the image.
Attachments
Issue Links
- relates to
-
QTBUG-26120 QComboBox popup doesn't close when the title bar of the containing window is clicked
-
- Closed
-
-
QTBUG-26465 QCombBox not dismissed if window moved
-
- Closed
-
-
QTBUG-28966 QComboBox does not move popup when widget is re-sized.
-
- Open
-
-
QTBUG-26827 ComboBox drop down does not hide if TitileBar is clicked after drop down is poped up
-
- Closed
-