Close popups on non-client area mouse press.

Fixed QComboBox popup issue which was left open if window
was moved(dragged) to another position.

Task-number: QTBUG-1894
Task-number: QTBUG-26120
Task-number: QTBUG-26465
Task-number: QTBUG-26827

Change-Id: I7e37b37881cdf94574d79f7e77d36f5bbc15f732
Reviewed-by: Andy Shaw <andy.shaw@digia.com>
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@digia.com>